recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:36: error: expected start of definition
	override def run() {
                 ^SquareKoch:39: error: Unmatched closing brace '}' ignored here
}
^